--- a/Flask/templates/Home.html
+++ b/Flask/templates/Home.html
@@ -43,13 +43,16 @@
 </head>
 <body>
     <div class="header">
-        <h1>Welcome to Player Trends</h1>
+        <h1>Player Performance Dashboard</h1>
         <p>Explore player statistics and trends below.</p>
     </div>
 
     <button id="button1">QB</button>
     <button id="button2">RB</button>
     <button id="button3">WR</button>
+    <p style="text-align: center;">
+        Image by <a href="https://www.freepik.com/free-vector/realistic-american-football-stadium_11733976.htm#query=american%20football%20field&position=0&from_view=keyword&track=ais&uuid=2e6983e7-c456-443a-8021-03bd72de6675" target="_blank" rel="noopener noreferrer">pikisuperstar</a> on Freepik
+    </p>
     <script>
         // Add event listeners to the buttons to redirect to the corresponding routes
         document.getElementById('button1').addEventListener('click', function(){
